--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -287,7 +287,7 @@
     <string name="no_subject">Trimiteți mesajul fără subiect?</string>
     <string name="yes">Da</string>
     <string name="no">Nu</string>
-    <string name="okay">OK</string>
+    <string name="ok">OK</string>
     <string name="forward_prefix">Redir:</string>
     <string name="original_message_divider">-------- Mesaj original --------</string>
     <string name="invalid_email_address">Adresa \'%s\' nu este validă</string>
