--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -285,7 +285,7 @@
     <string name="no_subject">Αποστολή μηνύματος χωρίς θέμα;</string>
     <string name="yes">Ναι</string>
     <string name="no">Όχι</string>
-    <string name="okay">Εντάξει</string>
+    <string name="ok">Εντάξει</string>
     <string name="forward_prefix">Προώθ:</string>
     <string name="original_message_divider">-------- Αρχικό Μήνυμα --------</string>
     <string name="invalid_email_address">Η διεύθυνση \'%s\' δεν είναι έγκυρη</string>
