--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -287,7 +287,7 @@
     <string name="no_subject">Poslati poruku bez predmeta?</string>
     <string name="yes">Da</string>
     <string name="no">Ne</string>
-    <string name="okay">U redu</string>
+    <string name="ok">U redu</string>
     <string name="forward_prefix">Fw:</string>
     <string name="original_message_divider">-------- Izvorna poruka --------</string>
     <string name="invalid_email_address">Ova adresa \'%s\' nije valjana</string>
