--- a/app/src/main/res/values-is-rIS/strings.xml
+++ b/app/src/main/res/values-is-rIS/strings.xml
@@ -283,7 +283,7 @@
     <string name="no_subject">Senda skilaboðin án efnislínu?</string>
     <string name="yes">Já</string>
     <string name="no">Nei</string>
-    <string name="okay">Í lagi</string>
+    <string name="ok">Í lagi</string>
     <string name="forward_prefix">Áfram:</string>
     <string name="original_message_divider">-------- Upprunaleg skilaboð --------</string>
     <string name="invalid_email_address">Tölvupóstfangið \'%s\' er ógilt</string>
