--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -283,7 +283,7 @@
     <string name="no_subject">Enviar mensagem sem assunto?</string>
     <string name="yes">Sim</string>
     <string name="no">Não</string>
-    <string name="okay">Aceitar</string>
+    <string name="ok">Aceitar</string>
     <string name="forward_prefix">Enc:</string>
     <string name="original_message_divider">-------- Mensagem original --------</string>
     <string name="invalid_email_address">O endereço \"%s\" é inválido</string>
