--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -291,7 +291,7 @@
     <string name="no_subject">Надіслати повідомлення без теми?</string>
     <string name="yes">Так</string>
     <string name="no">Ні</string>
-    <string name="okay">Гаразд</string>
+    <string name="ok">Гаразд</string>
     <string name="forward_prefix">Fw:</string>
     <string name="original_message_divider">-------- Оригінальне повідомлення --------</string>
     <string name="invalid_email_address">Адреса %s недійсна</string>
