--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -279,7 +279,7 @@
     <string name="no_subject">确定要发送无主题的邮件吗？</string>
     <string name="yes">是</string>
     <string name="no">否</string>
-    <string name="okay">确定</string>
+    <string name="ok">确定</string>
     <string name="forward_prefix">转发：</string>
     <string name="original_message_divider">--------原始邮件--------</string>
     <string name="invalid_email_address">地址 %s 无效</string>
