--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -279,7 +279,7 @@
     <string name="no_subject">是否傳送無主旨的郵件？</string>
     <string name="yes">是</string>
     <string name="no">否</string>
-    <string name="okay">好</string>
+    <string name="ok">好</string>
     <string name="forward_prefix">轉寄：</string>
     <string name="original_message_divider">-------- 原始郵件 --------</string>
     <string name="invalid_email_address">位址 ‘%s’ 無效</string>
