--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -110,7 +110,8 @@
     <string name="set_msg_expiration_1_week">1 week</string>
     <string name="set_msg_expiration_custom">Custom</string>
     <string name="set_msg_expiration_check_description">This item is checked</string>
-    <string name="composer_invalid_sender_saving_draft_failed">The address in the \"From\" field is not valid. Please replace it with a valid one</string>
+    <string name="composer_invalid_sender_saving_draft_failed">The \"From:\" address is invalid. Please change it to a valid one</string>
+    <string name="composer_invalid_subject_saving_draft_failed">The subject is not valid.</string>
     <!-- endregion -->
     <!-- region Settings -->
     <string name="settings_theme_title">Theme</string>
@@ -143,6 +144,7 @@
     <!-- region Notifications -->
     <string name="notification_summary_text_new_messages">New messages</string>
     <string name="notification_invalid_sender_sending_failed">Your message can be found as a draft. Please verify that the \"From:\" email in the message is active.</string>
+    <string name="notification_invalid_subject_sending_failed">Your message can be found as a draft. The subject is not valid.</string>
     <!-- endregion -->
     <!-- region Contacts Empty States -->
     <string name="contacts_empty_state_no_contacts">No contacts</string>
