--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -841,6 +841,7 @@
     <!-- endregion -->
     <string name="invalid_firebase_api_key_message">Invalid Firebase API key. Push notifications will not work.</string>
     <string name="failed_saving_draft_online">Failed saving online draft for message: \"%s\"</string>
+    <string name="failed_draft_does_not_exist">Message \"%s\" does not exist.</string>
     <string name="failed_uploading_attachment_online">Attachment error for message: \"%s\"</string>
     <string name="cannot_open_message_while_being_sent">Can\'t open this message while it\'s being sent</string>
     <string name="enable_conversation_mode">Enable conversation mode</string>
